# search

./: .env.example  pyproject.toml
src/wzry_search_mcp/: server.py
