[project]
name = "wzry-search-mcp"
version = "1.0.0"
description = "王者荣耀游戏助手自建联网搜索MCP服务"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
wzry-search-mcp = "wzry_search_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wzry_search_mcp"]
